Fix alignment of title button

--- a/client/src/css/main.scss
+++ b/client/src/css/main.scss
@@ -492,7 +492,7 @@ p.readme-link {
     border: 1px solid #008ED6;
     padding: 7px;
     display: inline-block;
-    margin-top: 20px;
+    margin-top: 21px;
     border-radius: 5px;
     a {
       line-height: 20px;
